kubernetes/apps/aasa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aasa
  namespace: aasa
spec:
  selector:
    app: aasa
  ports:
    - port: 80
      targetPort: 80
